tests/errors/type8.ramen
SELECT 1 + (IF true THEN "glop" ELSE "pas glop") AS x;
